# barrier-free-mobility-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/adapters/: __init__.py  api_error.py  base.py  elevator_info_client.py  elevator_status_client.py  facility_client.py  http_pool.py  mock_client.py  restroom_client.py  shortest_route_client.py
app/api/: __init__.py  health.py  metrics.py  routes.py
app/cache/: __init__.py  base.py  factory.py  memory_cache.py  redis_cache.py
app/core/: auth.py  concurrency.py  config.py  errors.py  http_security.py  logging.py  metrics.py  security.py
app/data/: facility_types.yaml  line_codes.yaml  place_aliases.yaml  risk_rules.yaml  route_station_codes.yaml  source_coverage.yaml  station_aliases.yaml
app/engine/: __init__.py  decision_engine.py  elevator_path_evidence.py  elevator_status.py  mobility_profile.py  restroom_policy.py  risk_alignment.py  risk_rules.py  risk_scoring.py  route_ranking.py
docs/: architecture.md  hosted-deployment.md  product-principles.md  usability-feedback.example.yaml  usability-review-guide.md  validation.md
scripts/: check_mcp_interoperability.py  check_release_safety.py  check_route_accuracy.py  collect_live_samples.py  evaluate_live_quality.py  generate_usability_review.py  start_local_mcp.ps1  summarize_usability_feedback.py  test_mcp_client.py  usability_review_common.py  usability_review_html.py
tests/: conftest.py
(+125 files in other folders)
