[project]
name = "barrier-free-mobility-mcp"
version = "0.1.0"
description = "FastMCP server for Seoul subway accessibility risk checks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.10.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
